Partially restore visibility class to prevent delay in show

--- a/source/index.styl
+++ b/source/index.styl
@@ -7,7 +7,7 @@
     visibility: hidden;
   }
 
-  &_ready {
+  &_visible, &_ready {
     opacity: 1;
 
     * {
